# AI-Trader

./: .env.exapmle  .gitignore  README.md  main.py  pyproject.toml  requirements-2.txt  requirements.txt
analisys/: analysis_prediction.py  test.py
analisys/Models/classification_models/: __init__.py  logistic_regression.py  random_forest_classifier.py  xgboost_classifier.py
analisys/models/: lstm_model.pkl  xgb_model.pkl
analisys/notebooks/: create_dataset.ipynb  create_prices_dataset.ipynb  regression_dataset.ipynb  train_classification_models.ipynb  train_reg_models.ipynb
modules/demo/: demo_module.py
nlp/: README.md  __init__.py  dataset.csv  datasets.json  requirements.txt  sentiment_analyzer.py
nlp/data_preprocessing/: lowercase_conversion.py  punctuation_removal.py  stemmer.py
nlp/models/: __init__.py  decision_tree_regression.py  knn_regression.py  nn.py
nlp/notebooks/: create_dataset.ipynb
nlp/notebooks /: create_dataset.ipynb
nlp/utils/: __init__.py  mse.py  tokenizer.py
src/ai_trader/analysis/: analysis_prediction.py  test.py
src/ai_trader/analysis/notebooks/: create_news_dataset.ipynb  create_prices_dataset.ipynb  train_reg_models.ipynb
src/ai_trader/analysis/utils/: models_utils.py  strategy.txt
src/ai_trader/core_api/: main.py  server.py
src/ai_trader/core_api/sentiment/: endpoint.py  services.py
src/ai_trader/nlp/: sentiment_analyzer.py
src/ai_trader/nlp/models/: base_model.py  decision_tree_regression.py  knn_regression.py  linear_regression.py  nn.py
src/ai_trader/nlp/notebooks/: create_and_test_models.ipynb
src/ai_trader/nlp/preprocess/: __init__.py  punctuation_removal.py  stemmer.py
src/ai_trader/nlp/tests/: conftest.py  test_embeddings.py
src/ai_trader/nlp/utils/: longest_sequence.py  mae.py  mse.py  tokenizer.py
src/ai_trader/sentiment/: __init__.py  sentiment_analyzer.py
src/ai_trader/simulate/: res.py
src/ai_trader/strategy/: base_strategy.py
src/ai_trader/strategy_old/: results  simulation.py
src/ai_trader/test/: nlp_test.py
strategy/: simulation.py  strategy.ipynb
strategy_module/: base_strategy.py
test/: nlp_test.py
utils/: req.py  simulate.py
(+5 files in other folders)
